# IFEM-apps

LR_mesh/: CMakeLists.txt  LR_sneddon.cpp  LRcrack.cpp  LRcrack_lrline.cpp  LRcrack_lrpoint.cpp  LRcrack_shear.cpp  README
input_files/Sneddon2D/: sneddon-40.xinp  sneddon-dyn-lr.xinp  sneddon.lr  sneddon_dyn.lr  sneddon_lr.xinp
